[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Effects/ExplosionAnim.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/TearGasParticles.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Characters/Ordnance/TearGas/TearGasArea2D.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0

[node name="TearGasArea2D" type="Area2D"]
modulate = Color( 1, 1.1, 1, 1 )
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.15, 0.22, 0.18, 0.5 )
position = Vector2( -1, 2 )
rotation = -0.0628318
scale = Vector2( 1.83913, 1.28739 )
z_index = -1
texture = ExtResource( 1 )
hframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1, 0.7 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 1, 0.8 )
amount = 70
lifetime = 3.0
explosiveness = 0.2
process_material = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_TearGasArea2D_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
